# databaseconnection

./: .gitignore  Connections.db  DataBaseConnections.db  Dockerfile  fastapi_logs.json  pyproject.toml  test_connections.db
app/: Connections.db  main.py
app/db_connection/: database.py
app/exceptions/: app_exceptions.py
app/jwt_handler/: auth.py
app/kafka/: producer.py
app/logs/: app_logger.py  app_logger_formatter.py
app/models/: model.py
app/routes/: db_routes.py  dbroutes.py
app/schemas/: schema.py
app/services/: service.py
app/utils/: entities.py
crud-data-app/: main.py
crud-data-app/databaseconnection/: database.py
crud-data-app/models/: model.py
crud-data-app/routes/: dbroutes.py
tests/: conftest.py  test_crud_api.py
