[tool.poetry]
name = "crud_data_app"
version = "0.1.0"
description = "A CRUD data application built with FastAPI"
authors = ["naveenhiremath28 <naveenhiremath28@gmail.com>"]
readme = "README.md"
packages = [{ include = "app", from = "." }, { include = "tests", from = "."},{include = "pyproject.toml", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pytest = "^8.3.4"
httpx = "^0.28.1"
coverage = "^7.6.10"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]

